nginx-cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
     - name: config-volume
       mountPath: /etc/lala
  volumes:
   - name: config-volume
     configMap:
       name: cmvolume
