nginx-sc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  secuirtyContext:
      runAsUser: 101
  containers:
  - image: nginx
    name: nginx
