neworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: mynp
spec:
   podSelector:
      matchLabels:
          app: nginx
   policyTypes:
   - Ingress
   ingress:
     - from:
       - podSelector:
          matchLabels:
             app: nginx
