policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: access-nginx
spec:
  podSelector:
     matchLabels:
        run: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
           access: 'true'
